# DuoTrak

./: .env.example  .gitignore  AI_Goal_Coach_Design.md  AI_Goal_Suggestion_Engine_Spec.md  Agentic_Design_Patterns.txt  Dockerfile  GEMINI.md  Table_of_Contents_for agentic design.txt  auth_analysis_report.md  auth_anaylsis_report_solution.md  auth_debugging_summary.md  authentication_report.md  backend_integration_guide.md  backend_overview.md  commit_message.txt  docker-compose.yml  duotrak-desgin-principle.md  duotrak.md  e.md  error.txt  eslint.config.mjs  goals_feature_breakdown.md  implementation_plan.md.resolved  jest.config.js  localhost-key.pem  localhost.pem  mock_auth_issue_report.md  next.config.mjs  package-lock.json  package.json  project_context.md  recovered_goal_detail_view.tsx  style-guide.md  tailwind.config.ts  test.db  ts_errors.txt  tsconfig.json  tsconfig.tsbuildinfo  what_you_did.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  backend_implentation.md  check_config.py  debug_agent.py  diag_script.py  get_test_user.py  localhost+1.p12  pyproject.toml  pytest.ini  requirements-uv.txt  requirements.txt  run_evaluation.py  run_holistic_evaluation.py  seed_goals.py  test.db  test_ai_service.py  test_dataset.json  test_print.py  test_weekly_metrics.py
backend/alembic/: env.py
backend/app/: create_tables.py  dependencies.py  main.py
backend/certs/: localhost+1-key.pem  localhost+1.pem
backend/data/: holistic_test_dataset.json
backend/scripts/: create_test_user.py  init_behavioral_metrics_table.sql  test_weekly_metrics.py
(+760 files in other folders)
